[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Other/Button.gd" type="Script" id=1]
[ext_resource path="res://Assets/Animations & Art/Button/Button1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Animations & Art/Button/Button2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sounds/metalClick.ogg" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 4.76901

[node name="Button" type="Node2D" groups=[
"buttons",
]]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 3075

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Button_normal" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Button_pressed" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
